--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     },
     "scripts": {
         "dev": "vuepress dev",
-        "build": "vuepress build"
+        "build": "vuepress build",
+        "copy-to-server": "rm -rfv ./.vuepress/server/assets && rsync -aP ./.vuepress/dist/ ./.vuepress/server/"
     },
     "license": "CC-BY-NC-SA-4.0",
     "devDependencies": {
