--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "scripts": {
         "dev": "vuepress dev",
         "build": "vuepress build",
-        "copy-to-server": "rm -rfv ./.vuepress/server/assets && rsync -aP ./.vuepress/dist/ ./.vuepress/server/"
+        "copy-to-server": "rsync -aP ./.vuepress/dist/ ./.vuepress/server/"
     },
     "license": "CC-BY-NC-SA-4.0",
     "devDependencies": {
